Adding new pages and updating existing ones

--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,9 @@ footer {
     width: 100%; 
     bottom: 0; 
 }
+div {
+    border-color: #333;
+    border-style: solid;
+    margin: 5%;
+    padding: 2rem;
+}
